# OpenGL-Learning

./: .gitignore  CMakeLists.txt  FragmentShader.glsl  VertexShader.glsl  main.c
src/App/: App.c  App.h  WinCfg.c  WinCfg.h
src/Camera/: camera.c  camera.h
src/Renderer/: material.h  mesh.h  model.c  model.h  texture.c  texture.h  vertex.h
src/Shader/: Shader.c  Shader.h  modeluniform.h
src/ShaderSrc/: CubeFG.glsl  FragmentShader.glsl  VertexShader.glsl
src/Shapes/: NCVertex.h  lightcube.c  lightcube.h  normalcube.c  normalcube.h
